Fixed the dynamical position on Firefox

--- a/src/sass/layout/_schedule.scss
+++ b/src/sass/layout/_schedule.scss
@@ -42,10 +42,11 @@
       font-size: 2.5rem;
     }
     &:hover {
-      background-color: darken(#fff, 20%);
+      background-color: darken(#fff, 15%);
     }
     &.active {
-      background-color: darken(#fff, 20%);
+      background-color: darken(#fff, 30%);
+      color: #fff;
     }
   }
 }
